--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -49,6 +49,10 @@
         align-items: center;
         justify-content: center;
         gap: 10px;
+        a{
+                text-decoration: none;
+                color: white;
+            }
         .icon {
             width: 50px;
             height: 50px;
@@ -61,8 +65,9 @@
             transition: all ease 0.3s;
             &:hover {
                 box-shadow: 0 0 0.625em var(--pink);
-                color: var(--pink);
+                color     : var(--pink);
             }
+            
         }
     }
 }
